--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                     <div class="mb-3 col">
                         <label for="eta" class="form-label">Fascia d'età</label>
                         <select id="eta" class="form-select" aria-label="Default select example">
-                            <option value="1" selected>Minorenne</option>
-                            <option value="2">Maggiorenne</option>
-                            <option value="3">Over 65</option>
+                            <option value="Minorenne" selected>Minorenne</option>
+                            <option value="Maggiorenne">Maggiorenne</option>
+                            <option value="Over65">Over65</option>
                         </select>
                     </div>
                 </div>
-                <button type="submit" onclick="showTicket()" class="btn border bg-body-secondary text-purple">Genera</button>
-                <button type="cancel" class="btn border bg-body-secondary text-purple">Annulla</button>
+                
             </form>
-
+            <button onclick="showTicket()" class="btn border bg-body-secondary text-purple">Genera</button>
+            <button type="cancel" class="btn border bg-body-secondary text-purple">Annulla</button>
         </div>
 
 
